# hp-stats-api

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
.github/: CODEOWNERS
.github/workflows/: main.yml
src/: db.rs  handlers.rs  main.rs  test.rs  types.rs
tests/: test.rs
