[package]
name = "hp-stats-api"
version = "0.1.0"
authors = [
    "peeech <pj@imagine-nyc.com>",
    "jetttech <lisa.jetton@holo.host>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
base64 = "0.13.0"
base36 = "=0.0.1"
ed25519-dalek = { version = "1.0.0-pre.1" }
serde_json = "1.0.79"
serde = "1.0.136"

[dependencies.hpos-config-core]
git = "https://github.com/Holo-Host/hpos-config"
rev = "62e328974ad738551920c85ced6ddf92f2ece29c"
