[package]
name = "hp-stats-api"
version = "0.1.0"
authors = [
    "peeech <pj@imagine-nyc.com>",
    "jetttech <lisa.jetton@holo.host>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
mongodb = "2.0.0"
test-case = "2.0.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
base64 = "0.13.0"
base36 = "=0.0.1"
ed25519-dalek = { version = "2.1.1" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
holochain_types = "0.4.0-dev.2"
holochain_conductor_api = "0.4.0-dev.2"

[dependencies.hpos-config-core]
git = "https://github.com/Holo-Host/hpos-config"
rev = "a36f862869cc162c843ac27ed617910d68f480cc"

[dependencies.hpos-config-seed-bundle-explorer]
git = "https://github.com/Holo-Host/hpos-config"
rev = "a36f862869cc162c843ac27ed617910d68f480cc"
